fixed confirm menu, quantity menu